--- a/sponsor.html
+++ b/sponsor.html
@@ -10,10 +10,17 @@
     <link rel="icon" type="image/png" sizes="16x16" href="content/favicon/favicon-16x16.png">
     <!-- FAVICON END -->
     <title>SPONSOR</title>
+    <meta name="keywords" content="Fodbold, Aarhus, Århus, Fremad, Aarhus Fremad, Århus Fremad">
+    <meta name="description" content="Aarhus Fremads hjemmeside der indeholder de nyeste nyheder om fodboldklubben">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Aarhus Fremad Fodbold">
+    <meta property="og:description" content="Aarhus Fremad Fodbold AS - Den hyggeligste fodboldklub i hele Danmark kan findes i Aarhus N">
+    <meta property="og:url" content="">
+    <meta property="og:site_name" content="Aarhus Fremad Fodbold">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="ps-rel">
         <div class="wrapper flex">
             <!-- vi bruger classen flexbox for at gøre hvert vores header element lige store så vi kan placere logo i midten på mobil udgaven og naven i midten på desktop version -->
             <div class="flexbox flex-center">
@@ -59,7 +66,7 @@
                     </nav>
                 </div>
             </div>
-            <div class="flexbox flex-ai-fe">
+            <div class="flexbox flex-jc-c flex-ai-fe">
                 <a class="logo" href="index.html" aria-label="index">
                     <img src="content/img/fremad_logo.svg" alt="">
                 </a>
@@ -100,7 +107,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="flexbox flex-ai-fe">
+            <div class="flexbox flex-jc-c flex-ai-fe">
                 <a class="cta" href="#">
                     <p>KØB</p>
                     <p>BILLETTER</p>
@@ -158,7 +165,7 @@
                         </div>
                         <div class="sponsore-box">
                             <h3>Diverse</h3>
-                            <p>Kontakt os for en uforpligtende samtale</p>
+                            <p>Kontakt os</p>
                             <div class="sponsore-pris-box">
                                 <p class="pris">?</p>
                             </div>
@@ -246,10 +253,10 @@
                         <h2>Hvad er Breakfast Club?</h2>
                     </div>
                     <div class="outer-box-txt">
-                    <p>Breakfast Club er vores bud et netværk i Aarhus. Et netværk, der passer ind i værdierne i klubben. Et netværk, hvor relationerne bliver prioriteret. Et netværk, hvor du kan være dig selv. Kort sagt et netværk, der er uformelt, men hvor du alligevel får skabt værdi for virksomheden og dig selv. 
+                    <p>Breakfast Club er vores bud på et netværk i Aarhus. Et netværk, der passer ind i værdierne i klubben. Et netværk, hvor relationerne bliver prioriteret. Et netværk, hvor du kan være dig selv. Kort sagt et netværk, der er uformelt, men hvor du alligevel får skabt værdi for virksomheden og dig selv. 
                         
                         Breakfast Club er altid den første fredag i hver måned fra 7.30-9.30 og foregår på Cafe Cross ved Åen. </p> <br>
-                    <p>Du har mulighed for at deltage som gæst i Breakfast Club for at se om netværket er noget du ønsker at deltage i fremadrettet. Du skal blot sende en mail til sponsoransvarlig Andreas Damgaard ved at klikke på knappen herunder:</p>
+                    <p>Du har mulighed for at deltage som gæst i Breakfast Club for at se, om netværket er noget du ønsker at deltage i fremadrettet. Du skal blot sende en mail til sponsoransvarlig Andreas Damgaard ved at klikke på knappen herunder:</p>
                     <a href="" class="btn">vær med som gæst</a>
                     </div>
                 </div>
@@ -257,7 +264,7 @@
         </section>
     </main>
     <footer>
-        <div class="wrapper flexc flex-jc-sb">
+        <div class="wrapper flex-mobile flex-jc-sb gap-200">
             <div class="footer-section">
                 <h2>Kontakt</h2>
                 <hr class="line-shift">
@@ -280,7 +287,7 @@
             <div>
                 <h2>Følg os</h2>  
                 <hr class="line-shift">
-                <div class="flex gap-1">
+                <div class="flex gap-100">
                     <a href="https://www.facebook.com/aarhusfremad">
                       <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <title>Facebook</title>
